fixed play button overflow on desktop

--- a/components/Tasks/Tasks.module.css
+++ b/components/Tasks/Tasks.module.css
@@ -330,7 +330,7 @@
         justify-content: center;
         align-items: center;
         width: 300px;
-        margin: 5rem auto;
+        margin: 1rem auto;
         z-index: 10;
     }
 }
